--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -20,3 +20,41 @@ h1 {
 .navbar-nav {
   margin-left: 50px;
 }
+img {
+  width: 350px;
+  height: 350px;
+  border-radius: 20px;
+  border: 3px solid var(--primary-color);
+}
+iframe {
+  border: 3px solid var(--primary-color);
+}
+
+.mantras-and-song {
+  margin-bottom: 50px;
+  margin-top: 50px;
+  text-align: center;
+}
+.col-sm-6 {
+  display: flex;
+  justify-content: space-around;
+}
+.biography {
+  border: 1px solid var(--primary-color);
+  border-radius: 30px;
+  text-align: justify;
+  font-size: 14px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-color: rgb(15, 2, 2);
+  padding: 20px;
+  margin-top: 90px;
+}
+.conta {
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+a {
+  color: var(--primary-color);
+}
