--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -1,11 +1,11 @@
 body {
-  background-color: black;
+  background-color:black;
   color: var(--primary-color);
 }
 
 .hero {
   text-align: center;
-  margin: 220px 50px;
+  margin-top: 220px;
 }
 
 h3 {
@@ -30,25 +30,28 @@ iframe {
   border: 3px solid var(--primary-color);
 }
 
-.mantras-and-song {
-  margin-bottom: 50px;
-  margin-top: 50px;
+.motor {
+  margin-top: 90px;
   text-align: center;
 }
 .col-sm-6 {
+  margin-top: 70px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+}
+.ditaba {
+  margin-left: 10px;
 }
 .biography {
-  border: 1px solid var(--primary-color);
+  
   border-radius: 30px;
-  text-align: justify;
+  text-align: center;
   font-size: 14px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   background-color: rgb(15, 2, 2);
   padding: 20px;
-  margin-top: 90px;
+  margin-top: 60px;
 }
 .conta {
   text-align: center;
@@ -57,4 +60,8 @@ iframe {
 }
 a {
   color: var(--primary-color);
+  text-decoration: none;
+}
+.my-name {
+  padding: 20px;
 }
